--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Welcome to my Website</h1>
-<p>This is me, Prakash Kumar Sah.</p>
+<p>This is me, Prakash Kumar Shah.</p>
 
 </body>
 </html>
