--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 
 <h1>Welcome to my Website</h1>
-<p>This is me, Prakash Kumar Shah.</p>
-
+<p>This is me, Prakash Kumar Sah.</p>
+<h4> This is for my learning purpose in HTML</h4>
 </body>
 </html>
 
