--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <h1>Welcome to my Website</h1>
 <p>This is me, Prakash Kumar Sah.</p>
 <h4> This is for my learning purpose in HTML.</h4>
+<img src="pp.jpg" alt="black and white" style="width:100%">
 </body>
 </html>
-
-
