this is still growing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>Welcome to my Website</h1>
 <p>This is me, Prakash Kumar Sah.</p>
-<h4> This is for my learning purpoasdasdse in HTML afahksjfhgkajsghdfkajghd'm noob.</h4>
+<h4> This is for my learning purpoasdasdse in HTML and I'm noob.</h4>
 <img src="pp.jpg" alt="black and white" style="width:10%">
 </body>
 </html>
